# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py portage_util.py:
  Added syntax checking for package.mask, package.unmask and packages files.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> dohtml: Reimplemented the
  option processing to remove the dependency on optparse.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Made the invalid
  profile slightly more intelligable and got rid of the duplicate. Moved
  the profile KEYWORDS.invalid failure so that it only occurs if the
  corresponding KEYWORD is valid.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Added settings
  parameter to dep_virtual as the virtuals can now change during dep graph
  creation. #68220

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Changed repoman to
  use the first stable profile found for each arch listed in profiles.desc
  rather than the last profile listed. Added notification on any invalid
  profile in profiles.desc. Made exception into a repoman error where a
  ebuild is using a keyword for which no profile can be found.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Fixed traceback in
  repoman on invalid LICENSE syntax.

  22 Oct 2004; Brian Harring <ferringb@gentoo.org> ebuild.sh: silencing use/has.

  22 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Added python version
  to "emerge info" output.

*portage-2.0.51 (20 Oct 2004): Everyone loves finding bugs in stable!

  20 Oct 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Fixed the result
  checking when ebuilds are called -- this removes the continuing-after failure
  big discovered by AMD64 today.
