@@ -65,12 +65,15 @@ def lockfile(mypath,wantnewlockfile=0,unlinkfile=0):
 		if not os.path.exists(lockfilename):
 			old_mask=os.umask(000)
 			myfd = os.open(lockfilename, os.O_CREAT|os.O_RDWR,0660)
-			if os.stat(lockfilename).st_gid != portage_data.portage_gid:
-				try:
+			try:
+				if os.stat(lockfilename).st_gid != portage_data.portage_gid:
 					os.chown(lockfilename,os.getuid(),portage_data.portage_gid)
-				except SystemExit, e:
-					raise
-				except:
+			except SystemExit, e:
+				raise
+			except OSError, e:
+				if e[0] == 2: # No such file or directory
+					return lockfile(mypath,wantnewlockfile,unlinkfile)
+				else:
 					portage_util.writemsg("Cannot chown a lockfile. This could cause inconvenience later.\n");
 			os.umask(old_mask)
 		else:
